--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,13 @@
       <version>8.4.1.jre8</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
